# Devinian_Hash

AES/: aes.h  main.c
dv_hash/: Poly.h  correctness.txt  crt.h  cuckoo.cpp  distribution.cpp  dv_hash.cpp  dv_hash_Cuckoo  dv_hash_Cuckoo.cpp  dv_hash_test  helper.h  k_wise.csv  output.txt  plot.ipynb  pure_rand.csv  random_test.c  random_test.cpp  result.csv  test  twoWise.csv  xor.h  xxh.csv
dv_hash/dv_hash_Cuckoo.dSYM/Contents/: Info.plist
dv_hash/dv_hash_Cuckoo.dSYM/Contents/Resources/Relocations/x86_64/: dv_hash_Cuckoo.yml
dv_hash/sht/: .gitignore  CMakeLists.txt
dv_hash/sht/src/: BOB_hash.h  algo_exp.h  cuckoo2.h  cuckoo_hashing.h  data_generater.cpp  main.cpp  sht.h  simple_hash.h
